- updated styles to fix layout issue

--- a/styles/src/gadget-ui.input.css
+++ b/styles/src/gadget-ui.input.css
@@ -1,19 +1,21 @@
 div .gadgetUIInputDiv{
 	display:inline;
 
-	font-family: Arial, sans;
+	font-family: inherit;
 }
 div .gadgetUIInputDiv span{
 	padding-left: 4px;
 	font-size: .8em;
 	letter-spacing: 1px;
-	font-family: Arial, sans;
+	font-family: inherit;
 }
 div .gadgetUIInputDiv input{
-	line-height:.9em;
-	font-size: .8em;
+	line-height: 0.8em;
+	font-size: 0.8em;
 	letter-spacing: 1px;
-	Font-family: Arial, sans;
+	font-family: inherit;
+	margin: 0px 0px -1px;
+	padding: 0px 0px 0px 1px;
 }
 
 div .gadgetUIInputDiv div{
